[gd_scene load_steps=6 format=3 uid="uid://b2rs8ga7k04tc"]

[ext_resource type="Script" uid="uid://dig4vjrl37qtr" path="res://gun.gd" id="1_dk5gl"]
[ext_resource type="Texture2D" uid="uid://bwa4b3xld0iep" path="res://character_art/Guns_V1.01 - Commission - Copy/01 - Individual sprites/Guns/AK 47 [96x48].png" id="1_vk1bi"]
[ext_resource type="AudioStream" uid="uid://bk1v86frnaun7" path="res://music/battle-rifle-42734.mp3" id="3_kw0bs"]
[ext_resource type="AudioStream" uid="uid://cvgsxaq4yo2h8" path="res://music/rifle-clip-empty-98832.wav" id="4_8iju2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dk5gl"]
radius = 105.019

[node name="Gun" type="Area2D"]
collision_layer = 0
script = ExtResource("1_dk5gl")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dk5gl")
debug_color = Color(0, 0.6, 0.7, 0.094)

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="Ak47[96x48]" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(11, 3)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_vk1bi")

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Ak47[96x48]"]
unique_name_in_owner = true
position = Vector2(31, -14)

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kw0bs")
volume_db = -20.0

[node name="OutOfAmmoSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8iju2")
volume_db = -15.0

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
